# raviole-device

./: BUILD.bazel  Kbuild  Kconfig  Kconfig.ext_modules  Makefile  Makefile.include  OWNERS  OWNERS_core  README.md  abi_gki_aarch64_pixel  build.config.cloudripper  build.config.gs101  build.config.slider  build_mixed.sh  build_slider.sh  device.bazelrc  merge-from-pixel-5.10.sh  merge-from-pixel-aosp-5.10.sh  project.config  slider.bzl  tests.bzl  update_symbol_list.sh  vendor_boot_modules.gs101  vendor_boot_modules.slider  vendor_kernel_boot_modules.gs201
arch/arm64/boot/dts/: BUILD.bazel
arch/arm64/boot/dts/google/: Makefile  gs101-common-touch.dtsi  gs101-common-typec.dtsi  gs101-cpu.dtsi  gs101-dma-heap.dtsi  gs101-fts-touch.dtsi  gs101-raven-camera.dtsi  gs101-raviole-usecases.dtsi  gs101-raviole-wcharger.dtsi  gs101-rmem.dtsi  gs101-slider-battery.dtsi  gs101-slider-touch.dtsi  gs101-slider-wcharger.dtsi  gs101-tpu.dtsi  gs101-usi.dtsi  gs101-whitefin2-battery.dtsi  gs101-whitefin2-wcharger.dtsi  gs101-whitefin2v2-wcharger.dtsi  gs101.dtsi  gs201-cpu.dtsi  gs201.dtsi
arch/arm64/configs/: cloudripper_gki.fragment  gki_defconfig  slider_gki.fragment
block/: elevator.c
drivers/: Kconfig  Makefile
drivers/clk/gs/: Kconfig  Makefile
drivers/clocksource/: exynos_mct.c
drivers/cpufreq/: Kconfig  Makefile  exynos-acme.c
drivers/devfreq/google/: Makefile  arm-memlat-mon.c  dvfs_events.h  governor_memlat_trace.h  gs-devfreq.c
drivers/dma/: Makefile  pl330.c
drivers/dma-buf/heaps/: Kconfig  deferred-free-helper.c  page_pool.c
drivers/dma-buf/heaps/samsung/: Kbuild  dmabuf_heap_trace.h  samsung-dma-heap.h  system_heap.c
drivers/gpu/exynos/: Kconfig
drivers/gpu/exynos/g2d/: g2d_trace.h  g2d_uapi_process.c
drivers/i2c/: Kconfig  Makefile
drivers/i2c/busses/: Kconfig  Makefile
drivers/iio/: Kconfig
drivers/iio/power/: odpm.c
drivers/input/: Kconfig  keydebug-func.c
drivers/input/fingerprint/: gf_spi.c
drivers/input/misc/: Kconfig
drivers/input/misc/vl53l1/: stmvl53l1_if.h  stmvl53l1_module-i2c.c  stmvl53l1_module.c
drivers/iommu/: Makefile  samsung-iommu.c
drivers/md/: dm-verity-target.c
drivers/media/platform/: Kconfig
drivers/media/platform/exynos/: Kconfig
drivers/media/platform/exynos/mfc/: mfc_mem.c
drivers/media/platform/exynos/smfc/: smfc-dev.c
drivers/mfd/: Kconfig  Makefile  s2mpg10-core.c  s2mpg11-core.c  s2mpg1x-gpio-gs201.c  s2mpg1x-gpio.c  slg51000-core.c
drivers/misc/: Kconfig
drivers/misc/bbdpl/: bbd.c  bcm_gps_spi.c
drivers/misc/sbb-mux/: sbb-mux.c  sbb-mux.h
drivers/misc/sscoredump/: sscoredump.c
drivers/pci/controller/dwc/: Kconfig  Makefile  pcie-exynos-common.h  pcie-exynos-dbg.c  pcie-exynos-rc.c
drivers/phy/: Kconfig
drivers/pinctrl/: Kconfig  Makefile  pinctrl-slg51000.c
drivers/pinctrl/gs/: BUILD.bazel  pinctrl-exynos.c  pinctrl-samsung.c  pinctrl-samsung.h
drivers/pinctrl/samsung/: pinctrl-samsung.c  pinctrl-samsung.h
drivers/power/: Kconfig
drivers/power/reset/: BUILD.bazel
drivers/regulator/: max77826-gs-regulator.c  s2mpg10-regulator.c  s2mpg11-regulator.c
drivers/scsi/ufs/: Kconfig  Makefile  ufs-exynos.c  ufs-exynos.h  ufs-pixel-crypto.c  ufs-pixel.c
drivers/soc/google/: BUILD.bazel  Kconfig  exynos-bcm_dbg.c  exynos-cpuhp.c  exynos-cpupm.c
drivers/soc/google/acpm/: acpm_mbox_test.c
drivers/soc/google/cal-if/: pmucal_system.c
drivers/soc/google/cpif/: BUILD.bazel  cpif_tp_monitor.c  link_device.c  link_device_memory_sbd.c  modem_io_device.c  modem_main.c  modem_utils.c
drivers/soc/google/debug/: Kconfig  debug-snapshot-dpm.c  debug-snapshot-log.c
drivers/soc/google/gsa/: gsa_gsc.c
drivers/soc/google/pixel_stat/mm/: Kbuild  meminfo.c
drivers/soc/google/pt/: pt.c  pt_trace.h  slc_acpm.c  slc_dummy.c
drivers/soc/google/vh/kernel/: systrace.h
drivers/soc/google/vh/kernel/sched/: fair.c  init.c  preemptirq_long.h  sched_events.h  sysfs_node.c
drivers/spi/: spi-s3c64xx.c
drivers/staging/android/: BUILD.bazel  Kbuild  Makefile  delay_init.c
drivers/thermal/: Kconfig
drivers/thermal/google/: google_bcl.c  gs101_spmic_thermal.c
drivers/thermal/samsung/: exynos_cpu_cooling.c  gs101_tmu_v2.c  gs_tmu_v2.c
drivers/trusty/: trusty-ipc.c  trusty.c
drivers/tty/serial/: exynos_tty.c
drivers/usb/: Kconfig
drivers/usb/dwc3/: Makefile  dwc3-exynos-otg.c  dwc3-exynos.c  dwc3-exynos.h
drivers/usb/host/: Makefile  xhci-exynos.c  xhci-exynos.h  xhci-plat.c
drivers/usb/typec/: Kconfig
drivers/usb/typec/tcpm/: Kbuild  Kconfig  tcpci_max77759.c
drivers/usb/typec/tcpm/google/: Kbuild  Kconfig  max77759_contaminant.c  slg46826.c  tcpci_fusb307.c  tcpci_max77759.c  tcpci_max77759.h
drivers/video/: Kconfig
include/: OWNERS
include/dt-bindings/pinctrl/: gs101.h
include/linux/: exynos-pci-ctrl.h  samsung-dma-heap.h
include/linux/mfd/samsung/: s2mpg10.h  s2mpg11.h
include/soc/google/: bcl.h
include/uapi/drm/: drm_fourcc.h  samsung_drm.h
include/uapi/linux/: virtio_ids.h
scripts/: Makefile.lib
sound/soc/codecs/: Kconfig
