# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//build/bazel_common_rules/dist:dist.bzl", "copy_to_dist_dir")
load("//build/kleaf:common_kernels.bzl", "aarch64_outs")
load(
    "//build/kleaf:kernel.bzl",
    "kernel_build",
    "kernel_build_config",
)

genrule(
    name = "build.config.mix",
    outs = ["build.config.mix.generated"],
    # Now that the build config is generated, the inferred KERNEL_DIR is
    # incorrect. Set it manually.
    cmd = """
        echo MIXED_BUILD=1 > $@
        echo KERNEL_DIR=gs/kernel/device-modules >> $@
        """,
)

kernel_build_config(
    name = "build.config.slider.mix",
    srcs = [
        # do not sort
        ":build.config.mix",
        "build.config.slider",
    ],
)

kernel_build(
    name = "slider",
    srcs = glob(
        ["**"],
        exclude = [
            ".*",
            "BUILD.bazel",
            "**/*.bzl",
        ],
    ) + [
        "//gs/kernel:sources",
    ],
    outs = [
        # Sync with build.config.slider
        "arch/arm64/boot/dts/google/gs101-a0.dtb",
        "arch/arm64/boot/dts/google/gs101-b0.dtb",
        "arch/arm64/boot/dts/google/dtbo.img",
        "arch/arm64/boot/dts/google/gs101-dpm-eng.dtbo",
        "arch/arm64/boot/dts/google/gs101-dpm-user.dtbo",
        "arch/arm64/boot/dts/google/gs101-dpm-userdebug.dtbo",
    ],
    base_kernel = "//common:kernel_aarch64",
    build_config = ":build.config.slider.mix",
    module_outs = [
        # keep sorted
        "delay_init.ko",
    ],
    # Keep in sync with build.config.common
    toolchain_version = "r433403",
    deps = [
        "//prebuilts/misc/linux-x86/libufdt:mkdtimg",
    ],
)
