load(
    "//build/kernel/kleaf:kernel.bzl",
    "ddk_module",
)

filegroup(
    name = "kconfig_files",
    srcs = glob(["**/Kconfig"]),
    visibility = ["//gs/google-modules/soc-modules:__subpackages__"],
)

ddk_module(
    name = "debug-reboot",
    srcs = [
        "debug-reboot.c",
        "//gs/google-modules/soc-modules:gs101_soc_headers",
    ],
    kernel_build = "//gs/google-modules/soc-modules:slider",
)
