load(
    "//build/kernel/kleaf:kernel.bzl",
    "ddk_module",
    "ddk_package",
)

filegroup(
    name = "kconfig_files",
    srcs = glob(["**/Kconfig"]),
    visibility = ["//gs/google-modules/soc-modules:__subpackages__"],
)

ddk_module(
    name = "delay_init",
    srcs = [
        "delay_init.c",
        "//gs/google-modules/soc-modules:gs101_soc_headers",
    ],
    kernel_build = "//gs/google-modules/soc-modules:slider",
)

ddk_package(
    name = "android",
    kernel_build = "//gs/google-modules/soc-modules:slider",
    deps = [":delay_init"],
)
