load(
    "//build/kernel/kleaf:kernel.bzl",
    "ddk_headers",
    "ddk_module",
)

filegroup(
    name = "kconfig_files",
    srcs = glob(["**/Kconfig"]),
    visibility = ["//gs/google-modules/soc-modules:__subpackages__"],
)

ddk_headers(
    name = "exynos_dit_headers",
    srcs = glob(["**/*.h"]),
    export_include_dirs = ["."],
)

ddk_module(
    name = "exynos_dit",
    srcs = glob([
        "dit.c",
        "dit_hal.c",
        "dit_net.c",
    ]),
    hdrs = [
        ":exynos_dit_headers",
        "//gs/google-modules/soc-modules:gs101_soc_headers",
    ],
    kernel_build = "//gs/google-modules/soc-modules:slider",
)
